[package]
edition = "2021"
name = "app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 封装的本地库
db = {path = "../db"}
library = {path = "../library"}
# 外部库
anyhow = "1"
bcrypt = "0.13"
chrono = {version = "0.4"}
poem = {version = "1.3"}
sea-orm = "0.9.0"
serde = "1"
tracing = "0.1.34"
tracing-subscriber = "0.3"
