[package]
edition = "2021"
name = "app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 封装的本地库
db = {path = "../db"}
library = {path = "../library"}
# 外部库
anyhow = "1"
bcrypt = "0.13"
chrono = {version = "0.4"}
once_cell = "1.13.0"
poem = {version = "1.3.35"}
poem-casbin-auth = {git = "https://github.com/casbin-rs/poem-casbin", branch = "main"}
sea-orm = "0.9.0"
serde = "1"
tokio = {version = "1", features = ["parking_lot"]}
tracing = "0.1.34"
tracing-subscriber = "0.3"
