[package]
edition = "2021"
name = "cmd"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# APP 包
app = {path = "../app"}
# 配置包
conf = {path = "../conf"}
# 数据库
db = {path = "../db"}
# 油条哥框架
poem = {version = "1.3"}
# 异步
tokio = {version = "1.0", features = ["full"]}
# 封装的本地库
library = {path = "../library"}

# 日志相关
env_logger = "0.9"
log = "0.4.0"
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"
