[package]
edition = "2021"
name = "db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
conf = {path = "../conf"}
once_cell = "1.9"
poem = "1.2"
sea-orm = "0.8.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
tokio = {version = "1"}
tracing = "0.1.34"
