[package]
edition = "2021"
name = "db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
conf = {path = "../conf"}
once_cell = "1.13.0"
poem = "1.3"
sea-orm = {version = "0.9.0", features = ["macros", "sqlx", "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-native-tls", "debug-print"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["parking_lot"]}
tracing = "0.1.34"
tracing-subscriber = "0.3"
